--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -43,8 +43,8 @@ services:
     image: "postgres"
     env_file:
       - psql.env
-    volumes:
-      - ./clubdata.sql:/docker-entrypoint-initdb.d/clubdata.sql
+      volumes:
+        - ./posts.sql:/docker-entrypoint-initdb.d/
     labels:
       - "traefik.http.routers.psql.rule=Host(`psql.local.seanhome.xyz`)"
       - "traefik.http.services.psql.loadbalancer.server.port=5432"
