--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -31,6 +31,7 @@ services:
   goapi:
     container_name: goapinew
     image: "smarman/ubuntudev:0.1.9"
+    restart: unless-stopped
     volumes:
       - .:/srv
     command: ["tail", "-f", "/dev/null"]
@@ -41,10 +42,11 @@ services:
   database:
     container_name: postgresnew
     image: "postgres"
+    restart: unless-stopped
     env_file:
       - psql.env
-      volumes:
-        - ./posts.sql:/docker-entrypoint-initdb.d/
+    volumes:
+      - ./posts.sql:/docker-entrypoint-initdb.d/
     labels:
       - "traefik.http.routers.psql.rule=Host(`psql.local.seanhome.xyz`)"
       - "traefik.http.services.psql.loadbalancer.server.port=5432"
